# orca

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  renovate.json  repo-structure.yaml
orca-harness/: Makefile  README.md  pyproject.toml
orca-harness/capture_spine/: __init__.py
orca-harness/cleaning/: audience_extractor.py  audience_post_input.py  basenotes.py  basenotes_lake.py  core.py  fragrantica.py  fragrantica_lake.py  models.py  parfumo.py  parfumo_lake.py  projection.py  transcript_product_extractor.py  transcript_product_lake.py
orca-harness/config/: contestants.yaml  models.yaml  prompts.yaml
orca-harness/data_lake/: __init__.py  attachment_record_entry.py  canonical_json.py  catalog.py  consumption.py  derived_retrieval_views.py  inventory.py  lake_touchpoint_inventory_v0.json  lane_registry.py  non_silver_record.py  root.py  silver_lineage.py  silver_record.py
orca-harness/docs/: adapter_author_contract.md  source_capture_agent_runbook.md  source_capture_packet.md  source_capture_review_rendering_findings_v0.md  source_observability_operator_records.md  source_observability_operator_records_template.yaml  source_observability_scalability_note.md
orca-harness/ecr/: __init__.py  deriver.py  lake.py  models.py
orca-harness/evidence_binding/: __init__.py  composer.py  models.py  verifier.py
orca-harness/runners/: _youtube_cli.py  poll_and_extract.ps1  run_basenotes_mgt_capture.py  run_basenotes_projection.py  run_capture_ecr_cleaning_smoke.py  run_cleaning_spine_periodic_audit.py  run_creator_metric_rollup_producer.py  run_creator_metric_rollup_snapshot.py  run_creator_profile_current_materialize.py  run_creator_rollup_formula_revalidation.py  run_data_lake_catalog.py  run_data_lake_doctor.py  run_data_lake_indexes_rebuild.py  run_edgar_headcount.py  run_finalization_receipt.py  run_fragrance_rendered_widget_companion.py  run_fragrance_review_coverage.py  run_fragrance_review_discovery.py  run_fragrance_review_lake_packet.py  run_fragrantica_mgt_capture.py  run_fragrantica_projection.py  run_ig_reels_grid_projection.py  run_ig_reels_lane_orchestrator.py  run_ig_reels_operator_product_extract.py  run_ig_reels_product_extract.py  run_instagram_reels_creator_metric_seed_materialize.py  run_live_lake_freshness_gate.py  run_parfumo_mgt_capture.py  run_parfumo_projection.py  run_reddit_agent_view.py  run_reddit_agent_view_ab_probe.py  run_reddit_batch_quality_summary.py  run_reddit_candidate_intake_live.py  run_reddit_consolidation.py  run_reddit_graph_frontier_register.py  run_reddit_old_http_batch.py  run_retail_pdp_projection.py  run_source_capture_antiblock_http_packet.py  run_source_capture_archive_packet.py  run_source_capture_authenticated_browser_packet.py  (+31 more)
orca-harness/schemas/: __init__.py  audience_comment_models.py  audience_inference_models.py  audience_label_ontology.py  (+3 more)
(+2769 files in other folders)
