[project]
name = "orca-harness"
version = "0.14.0"
description = "Deterministic Step A judgment harness rebuild for Orca"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.13,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.44,<2",
]
cloakbrowser = [
  "cloakbrowser>=0.3.31,<0.4",
]

[tool.setuptools]
py-modules = ["harness_utils"]

[tool.setuptools.packages.find]
include = [
  "cleaning",
  "data_lake",
  "ecr",
  "capture_spine",
  "capture_spine.*",
  "runners",
  "schemas",
  "scoring",
  "source_capture",
  "source_capture.*",
  "source_observability",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
