[project]
name = "orca-harness"
version = "0.14.0"
description = "Deterministic Step A judgment harness rebuild for Orca"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.13,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.44,<2",
]
cloakbrowser = [
  "cloakbrowser>=0.3.31,<0.4",
]
impersonate = [
  # Chrome TLS/JA3 + HTTP/2 "costume" for stealth public-data capture (youtube_capture/).
  # Declared here so Renovate (renovate.json) can auto-PR each release and the fingerprint
  # tracks current Chrome. Floor-pinned + human-reviewed; manual pre-merge freshness check:
  # youtube_capture/verify_fingerprint_v0.py.
  "curl_cffi>=0.15.0,<0.16",
]
transcribe = [
  # Transcript spine runtime deps (source_capture/transcript/). OPTIONAL + LAZY-imported: the
  # package and its network-free unit tests do NOT require these; only real capture/ASR does.
  # yt-dlp: caption json3 + bestaudio fetch (token-free clients). faster-whisper: VAD-gated
  # ASR fallback for no-caption videos.
  "yt-dlp",
  "faster-whisper",
]

[tool.setuptools]
py-modules = ["harness_utils"]

[tool.setuptools.packages.find]
include = [
  "cleaning",
  "data_lake",
  "ecr",
  "capture_spine",
  "capture_spine.*",
  "runners",
  "schemas",
  "scoring",
  "source_capture",
  "source_capture.*",
  "source_observability",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
